# hummingbird

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: windows.yml
package/inno/: LICENSE.txt
queries/: windows_fix_checksums.sql
src/: main.rs
src/devices/: format.rs
src/devices/builtin/: cpal.rs  dummy.rs  win_audiograph.rs
src/media/: traits.rs
src/media/builtin/: symphonia.rs
src/playback/: events.rs  interface.rs  queue.rs  thread.rs
src/services/: controllers.rs
src/settings/: storage.rs
src/ui/: about.rs  app.rs  caching.rs  command_palette.rs  components.rs  data.rs  models.rs  queue.rs  search.rs  theme.rs
src/ui/components/: checkbox.rs  drag_drop.rs  input.rs  label.rs  palette.rs  resizable_sidebar.rs  scrollbar.rs  sidebar.rs  table.rs  textbox.rs
src/ui/components/palette/: finder.rs
src/ui/components/table/: table_data.rs  table_item.rs
src/ui/search/: model.rs
