[package]
name = "hummingbird"
version = "0.1.1"
edition = "2024"
description = "Music Player"
license = "Apache-2.0"
readme = "README.md"
categories = ["multimedia::audio"]

[features]
runtime_shaders = ["gpui/runtime_shaders"]
console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["sqlx-sqlite"] }
console-subscriber = { version = "0.5", optional = true }
cpal = "0.16"
dateparser = "0.2"
derive_more = { version = "2.1.0", features = ["debug"] }
directories = "6"
futures = "0.3"
globwalk = "0.9"
gpui = "0.2"
image = "0.25"
indexmap = { version = "2", features = ["serde"] }
intx = "0.1"
itertools = "0.14"
md5 = "0.8"
moka = { version = "0.12", features = ["sync"] }
notify = "8"
nucleo = "0.5"
open = "5"
rand = "0.9"
raw-window-handle = "0.6"
rb = "0.4"
regex = "1"
rubato = "0.16"
rust-embed = "8"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "sqlite"] }
symphonia = { version = "0.5", features = ["all", "opt-simd"] }
symphonia-adapter-libopus = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
url = "2.5"
urlencoding = "2"
zed-reqwest = { version = "0.12.15-zed", default-features = false, features = [
    "json",
    "macos-system-configuration",
    "rustls-tls-native-roots",
] }

[build-dependencies]
anyhow = "1"
dotenvy = "0.15"
vergen-git2 = "1"

[target.'cfg(not(all(target_os = "windows", target_arch = "aarch64")))'.dependencies]
symphonia-adapter-fdk-aac = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Devices_Enumeration",
    "Foundation_Collections",
    "Media",
    "Media_Audio",
    "Media_MediaProperties",
    "Media_Render",
    "Storage_Search",
    "Storage_Streams",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
windows-future = "0.3"
windows-result = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
imagesize = "0.14"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSImage"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-foundation = { version = "0.3", features = [
    "NSData",
    "NSDictionary",
    "NSValue",
] }
objc2-media-player = { version = "0.3", features = ["MPNowPlayingInfoCenter"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9"
zbus = "5"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev-optimized]
inherits = "dev"
opt-level = "s"

[profile.release]
opt-level = "s"
lto = "thin"
strip = "symbols"

[profile.release-distro]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = "full"
split-debuginfo = "packed"
